--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "deepmerge": "^3.0.0",
     "prettyjson": "^1.2.1"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
